Add functional sign-in/auth

--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -5,9 +5,9 @@
   </head>
 
   <body>
-    <form method="POST" action="/sign-in">
+    <form method="post" action="/sign-in">
       <input name="email" type="email" placeholder="Email"></input>
-      <input name="pass" type="password" placeholder="password"></input>
+      <input name="password" type="password" placeholder="password"></input>
       <input type="submit" value="Sign in">
     </form>
   </body>
