--- a/templates/me.html
+++ b/templates/me.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/static/style/lib/cutestrap.min.css">
     <style type="text/css">
       body {
-        margin: 1em 10%;
+        margin: 0 10% 2em 10%;
         width: 80%;
       }
 
@@ -26,7 +26,7 @@
   <body>
     <h1>Settings</h1>
 
-    <form method="patch" action="/settings">
+    <form method="post" action="/me">
       <label class="textfield">
         <input name="email" type="email" value="{{.ObfuscatedEmail}}" disabled />
         <span class="textfield__label">Email Address</span>
