--- a/templates/me.html
+++ b/templates/me.html
@@ -24,8 +24,9 @@
   </head>
 
   <body>
-    <h1>Settings</h1>
+    <h1>{{.Name}}</h1>
 
+    <h2>Your Account</h2>
     <form method="post" action="/me">
       <label class="textfield">
         <input name="email" type="email" value="{{.ObfuscatedEmail}}" disabled />
@@ -80,6 +81,21 @@
       </label>
 
       <input type="submit" value="Save changes">
+      <hr/>
+
+      <h2>Devices and Sessions</h2>
+      {{ range $i, $e := .Sessions }}
+        <section class="grid grid--medium">
+          <div class="column--heavy">
+            {{ $e.Device }}<br>
+            {{ $e.IP }}<br>
+            Created on: <strong>{{ $e.Timestamp }}</strong>
+          </div>
+          <div>
+            <a class="btn" href="/me/revoke/{{ $i }}">Revoke Access</a>
+          </div>
+        </section>
+      {{ end }}
     </form>
   </body>
 </html>
