Fix GetRangeJoined error message & index template

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
             <div class="article-meta">
               <small>
                 <time>{{ $e.PrettyTime }}</time>
-                <!--a class="article-link" href="/posts/{{ $e.ID }}">-->{{ $e.Count | CommifyUint64 }}<!--</a>-->
+                <!--a class="article-link" href="/posts/{{ $e.ID }}">-->{{ $e.Count | commifyUint64 }}<!--</a>-->
               </small>
             </div>
         </header>
