Add timezone field to user's page

--- a/templates/me.html
+++ b/templates/me.html
@@ -80,6 +80,11 @@
         <span class="select__label" for="select">Posts per Page</span>
       </label>
 
+      <label class="textfield">
+        <input name="timezone" type="text" value="{{.Timezone}}" />
+        <span class="textfield__label">Timezone</span>
+      </label>
+
       <input type="submit" value="Save changes">
       <hr/>
 
