--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,29 @@
       const md = window.markdownit();
       
       document.addEventListener('DOMContentLoaded', function() {
-        let posts = document.getElementsByClassName('post-content');
+        let post_contents = document.getElementsByClassName('post-content');
 
-        for (let i = 0; i < posts.length; i++) {
-          const trimmedContent = posts[i].textContent.trim()
+        for (let i = 0; i < post_contents.length; i++) {
+          const trimmedContent = post_contents[i].textContent.trim();
 
-          posts[i].innerHTML = md.render(trimmedContent)
+          post_contents[i].innerHTML = md.render(trimmedContent);
+        }
+
+        let postActions = document.getElementsByClassName('article-actions');
+
+        for (let i = 0; i < postActions.length; i++) {
+          let replyButton = document.createElement('button');
+          replyButton.className = 'post-reply';
+
+          let menuButton = document.createElement('button');
+          menuButton.className = 'post-menu';
+
+          let fragment = document.createDocumentFragment();
+
+          fragment.appendChild(replyButton);
+          fragment.appendChild(menuButton);
+
+          postActions[i].appendChild(fragment);
         }
       });
     </script>
@@ -41,23 +58,24 @@
       </header>
       <hr>
       
-      {{ range $i, $e := .Posts }}
-        <article style="background-image: url('{{ $e.Avatar }}')">          
+      {{ range .Posts }}
+        <article style="background-image: url('{{ .Avatar }}')"> 
+          <div class="article-actions"></div>         
           <header>
             <hgroup>
-              <h1><a href="/users/{{ $e.AuthorName }}" rel="author">{{ $e.AuthorName }}</a></h1>
-              <h2>{{ $e.Title }}</h2>
+              <h1><a href="/users/{{ .AuthorName }}" rel="author">{{ .AuthorName }}</a></h1>
+              <h2>{{ .Title }}</h2>
             </hgroup>
 
             <div class="article-meta">
               <small>
-                <time>{{ $e.PrettyTime }}</time>
-                <!--a class="article-link" href="/posts/{{ $e.ID }}">-->{{ $e.Count | commifyUint64 }}<!--</a>-->
+                <time>{{ .PrettyTime }}</time>
+                <a class="article-link">{{ .Count | commifyUint64 }}</a>
               </small>
             </div>
         </header>
           
-          <section class="post-content">{{ $e.Content }}</section>
+          <section class="post-content">{{ .Content }}</section>
         </article>
       {{ end }}
       <hr>
