--- a/templates/me.html
+++ b/templates/me.html
@@ -5,25 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/static/style/lib/cutestrap.min.css">
     <style type="text/css">
-      body {
-        margin: 0 10% 2em 10%;
-        width: 80%;
-      }
-
       @media (max-width: 600px) {
         body {
-          margin-left: 5%;
-          margin-right: 5%;
+          margin-left: 2.5%;
+          margin-right: 2.5%;
+        }
+      }
+
+      @media (min-width: 600px) {
+          body {
+          margin: 0 auto 2em auto;
+          width: 80%;
         }
       }
       
       input:invalid {
         box-shadow: 0 0 5px 1px red;
       }
+
+      header { float: right }
     </style>
   </head>
 
   <body>
+    <header>
+      <a href="/">Home</a>
+    </header>
+
     <h1>{{.Name}}</h1>
 
     <h2>Your Account</h2>
