--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/static/style/lib/cutestrap.min.css">
     <title></title>
+    <style type="text/css">
+      @media (max-width: 600px) {
+        body {
+          margin-left: 2.5%;
+          margin-right: 2.5%;
+        }
+      }
+
+      @media (min-width: 600px) {
+        body {
+          margin: 1em auto 2em auto;
+          width: 360px;
+        }
+      }
+      
+      input:invalid {
+        box-shadow: 0 0 5px 1px red;
+      }
+    </style>
   </head>
 
   <body>
     <form method="post" action="/sign-in">
-      <input name="email" type="email" placeholder="Email"></input>
-      <input name="password" type="password" placeholder="password"></input>
+      <label class="textfield">
+        <input name="email" type="email" />
+        <span class="textfield__label">Email</span>
+      </label>
+
+      <label class="textfield">
+        <input name="password" type="password" />
+        <span class="textfield__label">Password</span>
+      </label>
+
       <input type="submit" value="Sign in">
     </form>
   </body>
