--- a/templates/index.html
+++ b/templates/index.html
@@ -4,34 +4,89 @@
     <title>Make a Post</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="/static/script/lib/markdown-it.min.8.2.2.js"></script>
+    <script src="/static/script/lib/marked.min.js"></script>
     <script type="text/javascript">
       const md = window.markdownit();
-      
-      document.addEventListener('DOMContentLoaded', function() {
-        let post_contents = document.getElementsByClassName('post-content');
 
-        for (let i = 0; i < post_contents.length; i++) {
-          const trimmedContent = post_contents[i].textContent.trim();
+      // Given a potentially multi-line string of text, return a version of that text with any
+      // Markdown blockquotes removed.
+      const stripQuotes = function(text) {
+        let lines = text.split(/\r?\n/);
+        let newlines = [];
 
-          post_contents[i].innerHTML = md.render(trimmedContent);
+        for (let i = 0; i < lines.length; i++) {
+          let line = lines[i].trim();
+
+          // We know this line is blockquotes if it begins with `>`.
+          if (line.charAt(0) !== '>') {
+            newlines.push(line);
+          }
+        }
+        
+        if (newlines[0] === '') {
+          newlines.shift();
         }
 
-        let postActions = document.getElementsByClassName('article-actions');
+        return newlines.join(`\r\n`);
+      };
 
-        for (let i = 0; i < postActions.length; i++) {
+      // Given a potentially multi-line string of text, return a version of that text with a `>`
+      // prepended to each line for a Markdown blockquote.
+      const quote = function(text) {
+        let lines = text.split(/\r?\n/);
+        let newlines = [`> **User**:`];
+  
+        for (let i = 0; i < lines.length; i++) {
+          let line = lines[i].trim();
+          
+          newlines.push('> ' + line);
+        }
+
+        newlines.push(`\r\n`);
+        
+        return newlines.join(`\r\n`);
+      }
+      
+      document.addEventListener('DOMContentLoaded', function() {
+        console.time('DOM_begin');
+
+        let bottom = document.getElementById('bottom');
+        let posts = document.getElementsByTagName('article');
+
+        for (let i = 0; i < posts.length; i++) {
+          let thisPost = posts[i];
+
+          let actions = thisPost.getElementsByClassName('article-actions').item(0);
+          let content = thisPost.getElementsByClassName('post-content').item(0);
+
+          // Get the post's Markdown content, parsing it and replacing it with the rendered HTML.
+          const trimmedContent = content.textContent.trim();
+
+          content.innerHTML = md.render(trimmedContent);
+
+          // Add 'Reply' and 'Option' buttons to each post, attaching handlers to them.
           let replyButton = document.createElement('button');
           replyButton.className = 'post-reply';
+          replyButton.innerText = 'Reply';
+          replyButton.addEventListener('click', function() {
+            const strippedAndQuoted = quote(stripQuotes(trimmedContent));
+
+            bottom.value = strippedAndQuoted;
+            bottom.focus();
+          });
 
           let menuButton = document.createElement('button');
           menuButton.className = 'post-menu';
+          menuButton.innerText = 'Options';
 
           let fragment = document.createDocumentFragment();
-
           fragment.appendChild(replyButton);
           fragment.appendChild(menuButton);
 
-          postActions[i].appendChild(fragment);
+          actions.appendChild(fragment);
         }
+
+        console.timeEnd('DOM_begin');
       });
     </script>
     <link rel="stylesheet" href="/static/style/main.css">
@@ -84,8 +139,8 @@
       {{ end }}
       <hr>
 
-      <form id="bottom" method="post" action="/posts">
-        <textarea name="reply" rows="8" placeholder="Reply.." autocomplete="off" minlength="1" required></textarea>
+      <form method="post" action="/posts">
+        <textarea id="bottom" name="reply" rows="8" placeholder="Reply.." autocomplete="off" minlength="1" autofocus required></textarea>
         <button type="submit">Reply</button>
       </form>
     </main>
