--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,7 @@
       <hr>
       
       {{ range .Posts }}
-        <article style="background-image: url('{{ .Avatar }}')"> 
+        <article id="{{ .ID }}" style="background-image: url('{{ .Avatar }}')"> 
           <div class="article-actions"></div>         
           <header>
             <hgroup>
