--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,18 @@
 <html>
   <head>
     <title>Make a Post</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="/static/script/lib/markdown-it.min.8.2.2.js"></script>
     <script src="/static/script/lib/marked.min.js"></script>
     <script src="/static/script/page.js"></script>
-    <link rel="stylesheet" href="/static/style/main.css">
+    <link rel="stylesheet" href="/static/style/main.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/x-icon" href="static/icon/favicon.ico" />
+    <link rel="icon" type="image/png" href="/static/icon/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/static/icon/favicon-16x16.png" sizes="16x16" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="mask-icon" href="/static/icon/safari-pinned-tab.svg" color="#d4770e" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#d4770e" />
   </head>
 
   <body>
@@ -67,7 +74,7 @@
     </main>
 
     <footer>
-      {{ getVersion }}
+      <small>{{ getVersion }}</small>
     </footer>
   </body>
 </html>
