--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,22 @@
     <main>
       <header id="top">
         <div id="head">
-          <h1><a href="/">Make a Post</a></h1>
+          <h1>
+            <a href="/">
+              <svg
+                version="1.1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                viewBox="0 0 360 360"
+              >
+                <path
+                  class="fill"
+                  d="M86,11 L180,226.445 L274,11 L360,11 L360,349 L274,349 L274,208.109 L223,325 L223,325 L137,325 L137,325 L86,208.109 L86,349 L0,349 L0,11 L86,11 z"
+                />
+              </svg>
+            </a>
+          </h1>
+
           <aside>
             <a href="/me">Settings</a>
             <a id="head-sign_out" href="/sign-out">Sign out</a>
