--- a/templates/me.html
+++ b/templates/me.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Settings</title>
+    <title>{{ getTitleWith "Your Account" }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/static/style/lib/cutestrap.min.css">
     <style type="text/css">
