--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <title>{{ getTitle }}</title>
+    <link rel="stylesheet" href="/static/style/main.css" />
     <script src="/static/script/lib/markdown-it.min.8.2.2.js"></script>
     <script src="/static/script/lib/marked.min.js"></script>
     <script src="/static/script/page.js"></script>
-    <link rel="stylesheet" href="/static/style/main.css" />
     <link rel="icon" type="image/x-icon" href="static/icon/favicon.ico" />
     <link rel="icon" type="image/png" href="/static/icon/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/static/icon/favicon-16x16.png" sizes="16x16" />
     <link rel="apple-touch-icon" href="/static/icon/apple-touch-icon.png" sizes="180x180" />
     <link rel="mask-icon" href="/static/icon/safari-pinned-tab.svg" color="#d4770e" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/static/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#d4770e" />
   </head>
@@ -21,7 +21,7 @@
       <header id="top">
         <div id="head">
           <h1>
-            <a href="/">
+            <a href="/page/latest#bottom">
               <svg
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
